# fist_lab_arm

./: README.md
husky_control/launch/: control.launch  teleop.launch
husky_description/urdf/: husky.urdf.xacro  wheel.urdf.xacro
husky_description/urdf/accessories/: intel_realsense.urdf.xacro
husky_gazebo/launch/: spawn_husky.launch
roboarm/: CMakeLists.txt  README.md  package.xml
roboarm/config/: diffdrive.yaml  manual_drive.yaml  roboarm.yaml  tbarmmanual.yaml  turtlebot_arm_control.yaml
roboarm/launch/: armbot.launch  huskyarm.launch  roboarm.launch  runkobuki.launch  turtlebotarm.launch
roboarm/resources/robo_arm_raw/: CMakeLists.txt
roboarm/resources/robo_arm_raw/include/: SerialLib.h
roboarm/resources/robo_arm_raw/src/: SerialLib.cpp  absolute_arm_feedback.cpp  read_data.cpp  relative_arm_feedback.cpp  write_data.cpp
roboarm/rviz/: armbot.rviz  huskyarm.rviz  roboarm.rviz
roboarm/script/: imu.py
roboarm/src/: arm_motion.cpp  defs.cpp  manual_run.cpp
roboarm/urdf/armbot/: armbot.urdf  armbot.urdf.xacro  armbot.xacro  sensors.xacro
roboarm/urdf/kobuki/: kobuki.urdf.xacro  kobuki_standalone.urdf.xacro
roboarm/urdf/roboarm/: roboarm.urdf.xacro  sensors.xacro
roboarm/urdf/turtlebot_arm/: arm_hardware.xacro  tbarm.xacro  turtlebot_arm.urdf.xacro  turtlebot_arm.xacro  turtlebot_gripper.xacro
roboarm/worlds/: arena.world  hump.dae  ramp1.dae  ramp2.dae  ramp3.dae  simul.world  terrain.dae
ur5_with_robotiq_gripper-master/icl_ur5_setup_description/robots/: ur5_robotiq_140_joint_limited.xacro  ur5_robotiq_140_joint_limited_onhusky.xacro
ur5_with_robotiq_gripper-master/icl_ur5_setup_description/urdf/: robotiq_arg2f.xacro  robotiq_arg2f_140_model_macro.xacro  robotiq_arg2f_finger_tips.xacro  robotiq_arg2f_transmission.xacro
ur5_with_robotiq_gripper-master/icl_ur5_setup_gazebo/config/: arm_controller_ur5_onhusky.yaml  (+1 more)
ur_description/urdf/: ur3.urdf.xacro  ur3_robot.urdf.xacro  ur5.urdf.xacro
ur_gazebo/controller/: arm_controller_ur3.yaml
ur_gazebo/launch/: ur3.launch
(+3 files in other folders)
